2003-01-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcalendar.c: Fix return value for 
	Gtk::Calender#(un)mark_day. 
	* src/rbgdkpango.c: Add a file.

2003-01-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/gtk2.rb: Require pango.
	* README: Add Ruby/Pango information.

2002-12-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/to_drawable.rb: Add a file(from Ruby/GdkPixbuf).
	* src/rbgdkpixbuf.c: Add a file. This defines Gdk::Pixbuf methods of GDK side.
	* README, COPYING.LIB: Change license term from "the GNU LIBRARY General Public 
	License version 2." to "the GNU LESSER GENERAL PUBLIC LICENSE Version 2.1.".

2002-12-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktexttagtable.c: Fix a segfault when TextTagTable#lookup crashes is called 
	with bad tag name.
	Bugs item #659231 by Maicon Rodrigues.
	
2002-12-28  Kazuo Saito <ksaito@uranus.dti.ne.jp>

	* src/rbgtk.h: Fix a bad definition of treeiter_set_value_table.

2002-12-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkaccelerator.c: Fix typo. 

2002-12-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkconst.c: Increment the version information.
	* src/rbgtkviewport.c: Change behavior of Gtk::Viewport.new to have to 
	set hadj, vadj.
	* src/rbgdkevent.c: Don't copy a created object in make_gdkevent. 
	* src/rbgtkadjustment.c:  Add Gtk::Adjustment#set_step_increment, #set_page_increment.
	* sample/testgtk/treestore.rb: Fix warning when run ruby with -d option.

2002-12-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreepath.c: Add Gtk::TreePath#to_s as alias of Gtk::TreePath#to_str.

2002-12-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/testgtk/testgtk.rb: Fix to call Gtk::main_quit twice.
	* src/rbgtkmain.c: Improve behavior of Gtk::main_quit. 
	* sample/testgtk/notebook.rb: Bugfix to use Gtk::Notebook#current_page => Gtk::Notebook#page.
	* sample/testgtk/wmhints.rb: Change Gdk::Bitmap to Gdk::Pixmap.
	* src/rbgdkpixmap.c: Remove Gdk::Bitmap. Use Gdk::Pixmap(depth = 1) instead. 